# Memoria

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  start.sh
app/: App.tsx  app.json  nativewind-env.d.ts  package-lock.json  package.json  tailwind.config.js
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 095ec47a20a9_initial_schema.py  d02d59094db6_create_tables.py
backend/app/: main.py  tasks.py
backend/app/api/routes/: alerts.py  audio.py  auth.py  gazettes.py  gdpr.py  memories.py  metrics.py  notifications.py  pairing.py  questions.py  seniors.py  sessions.py  stt.py  tts.py  voice_pipeline.py
backend/app/core/: celery_app.py  config.py  database.py  deps.py  encryption.py  rate_limit.py  security.py
backend/app/models/: __init__.py  alert.py  cognitive_metric.py  gazette.py  memory.py  senior.py  session.py  theme.py  transcription.py  user.py
backend/app/schemas/: alert.py  auth.py  gazette.py  memory.py  metric.py  senior.py  session.py
backend/app/services/: ai_conversation.py  alert_service.py  cognitive_analysis.py  cron_jobs.py  gazette_service.py  memory_extraction.py  notification_service.py  question_bank.py  semantic_analysis.py  session_lifecycle.py  session_scheduler.py  storage_service.py  stt_service.py  tts_service.py
backend/scripts/: export_openapi.py  seed_demo.py  test_pipeline.py  validate_apis.py
backend/tests/: conftest.py  test_ai_conversation.py  test_alerts.py  test_audio_security.py  test_auth.py  test_e2e_pipeline.py  test_encryption.py  test_gazette.py  test_gdpr.py  test_health.py  test_memories.py  test_metrics.py  test_question_bank.py  test_semantic_analysis.py  test_seniors.py  test_session_lifecycle.py  test_sessions.py
dashboard/: index.html  package-lock.json  package.json
database/: seed_themes.sql
docs/: api.md  architecture.md  scenario-demo.md  setup.md
frontend/: App.tsx  app.json  package-lock.json  package.json
pitch/: generate_dossier.py  generate_pdf.py  index.html
website/: Dockerfile  next.config.js  (+5 more)
(+76 files in other folders)
