[project]
name = "memoria-backend"
version = "0.1.0"
description = "MEMORIA - Systeme d'IA Biographique et Preventive"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "anthropic>=0.39.0",
    "spacy>=3.7.0",
    "reportlab>=4.0.0",
    "sendgrid>=6.11.0",
    "boto3>=1.34.0",
    "slowapi>=0.1.9",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
