[project]
name = "memoria-backend"
version = "0.1.0"
description = "MEMORIA - Systeme d'IA Biographique et Preventive"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.0",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.32",
    "httpx>=0.28.0",
    "cryptography>=49.0.0",
    "redis>=8.0.0",
    "celery>=5.6.0",
    "anthropic>=0.117.0",
    "spacy>=3.8.0",
    "reportlab>=5.0.0",
    "sendgrid>=6.12.0",
    "boto3>=1.43.0",
    "slowapi>=0.1.10",
    "apscheduler>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
